--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "@types/history": "^2.0.39",
     "@types/immutable": "^3.8.4",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
