--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,29 @@
   "display": "standalone",
   "theme_color": "#fff",
   "background_color": "#fff",
-  "icons": [
-    {
-      "src": "/assets/icon.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "icons": [{
+    "src": "/assets/icon-36.png",
+    "sizes": "36x36",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icon-48.png",
+    "sizes": "48x48",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icon-64.png",
+    "sizes": "64x64",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icon-96.png",
+    "sizes": "96x96",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icon-144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
