--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/ewgenius/fakeoff-banking#readme",
   "dependencies": {
+    "firebase": "^3.5.1",
     "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
