--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-router": "^2.0.38",
     "@types/redux": "^3.6.31",
     "css-loader": "^0.25.0",
+    "es6-promise": "^4.0.5",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
