--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
   },
   "include": [
     "src/**/*",
-    "node_modules/@types/**/*"
+    "node_modules/@types/**/*",
+    "typings/**/*"
   ]
 }
