--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Fakeoff",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#fff",
-  "background_color": "#fff",
+  "theme_color": "#000",
+  "background_color": "#000",
   "icons": [{
     "src": "/assets/icon-36.png",
     "sizes": "36x36",
