--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
   "dependencies": {
     "firebase": "^3.5.1",
     "immutable": "^3.8.1",
+    "material-ui": "^0.16.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
+    "reflexbox": "^2.2.2"
   },
   "devDependencies": {
     "@types/history": "^2.0.39",
     "@types/immutable": "^3.8.4",
+    "@types/material-ui": "^0.15.37",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
     "@types/react-redux": "^4.4.32",
     "@types/react-router": "^2.0.38",
+    "@types/react-tap-event-plugin": "0.0.30",
     "@types/redux": "^3.6.31",
     "css-loader": "^0.25.0",
     "es6-promise": "^4.0.5",
